--- a/Code/flowcharts_project.json
+++ b/Code/flowcharts_project.json
@@ -8,7 +8,11 @@
     "callbacks": {
       "onScriptEnd": {
         "callbackFunction": "onScriptEnd",
-        "callbackKeyword": "callback_two"
+        "callbackKeyword": "callback_one"
+      },
+      "onScriptFailure": {
+        "callbackFunction": "onScriptFailure",
+        "callbackKeyword": "callback_one"
       },
       "onScriptError": {
         "callbackFunction": "onScriptError",
