--- a/Code/flowcharts_project.json
+++ b/Code/flowcharts_project.json
@@ -5,7 +5,16 @@
     "isCustomFunctionsFromScriptsDir": false,
     "projectSuiteInfo": [],
     "flowchartsAndExternalDdcsvInfo": {},
-    "callbacks": {},
+    "callbacks": {
+      "onScriptEnd": {
+        "callbackFunction": "onScriptEnd",
+        "callbackKeyword": "callback_one"
+      },
+      "onScriptFailure": {
+        "callbackFunction": "onScriptFailure",
+        "callbackKeyword": "callback_one"
+      }
+    },
     "filters": {
       "fltUID_855a0806060ce04a06083530348895e6d04d": {
         "combo": {
